scenarios/03-canary-deployment/ratings/ratings-v2-mongo-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v2
  namespace: 03-canary-deployment
  labels:
    app: ratings
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v2
  template:
    metadata:
      labels:
        app: ratings
        version: v2
    spec:
      serviceAccountName: bookinfo-ratings-v2
      containers:
      - name: ratings
        image: docker.io/istio/examples-bookinfo-ratings-v2:1.20.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
