scenarios/03-canary-deployment/ratings/ratings-v2-mysql-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings-v2-mysql
  namespace: 03-canary-deployment
  labels:
    app: ratings
    version: v2-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v2-mysql
  template:
    metadata:
      labels:
        app: ratings
        version: v2-mysql
    spec:
      containers:
      - name: ratings
        image: docker.io/istio/examples-bookinfo-ratings-v2:1.20.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
